...
                                .font(.title3)
                                .padding(.horizontal, 5)
                        }
                    }
                }
                Section {
                    Button("Log out", role: .destructive) {
                        showLogOutAlert.toggle()
                    }
                    Button("Delete account", role: .destructive) {
                        showDeleteAlert.toggle()
                    }
                }
            }
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    NavigationLink {
                        EditDataView(user: $viewModel.user)
                    } label: {
                        Text("Edit data")
                    }
                }
            }
            .alert("Loging out", isPresented: $showLogOutAlert) {
                Button("Log out", role: .destructive) {
                    Task {
...
