...
                PasswordResetView()
            })
            .navigationTitle("Edit your data")
            .navigationBarTitleDisplayMode(.large)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Save data") {
                        Task {
                            try await viewModel.changeName(newName: user?.fullName ?? "")
                            dismiss()
                        }
                    }
                }
...
