...
                        NavigationLink {
                            ProfileView(user: user)
                        } label: {
                            AvatarView(tempImage: profileViewModel.tempImage,
                                       imageUrl: profileViewModel.user?.imageUrl,
                                       size: .xsmall)
                            .accessibilityIdentifier("myImageID")
                        }
                    } else {
                        ProgressView()
                    }
                }
                ToolbarItem(placement: .principal) {
...
